reportdesign/source/ui/report/SectionWindow.cxx
@@ -116,6 +116,7 @@ OSectionWindow::~OSectionWindow()
 // -----------------------------------------------------------------------------
 void OSectionWindow::_propertyChanged(const beans::PropertyChangeEvent& _rEvent) throw( uno::RuntimeException)
 {
+    SolarMutexGuard g;
     const uno::Reference< report::XSection > xSection(_rEvent.Source,uno::UNO_QUERY);
     if ( xSection.is() )
     {
